[package]
name = "rust-screen-time"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.2.16"
csv = "1.1.6"
directories = "4.0.1"
log = "0.4.17"
serde = { version = "1.0", features = ["derive"] }
x11rb = "0.10.1"
